<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B55F5F">

    <Button
        android:id="@+id/deleteButtonBoard"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/deleteButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/optionButtonBoard"
        app:layout_constraintStart_toEndOf="@+id/clearButtonBoard" />

    <Button
        android:id="@+id/createButtonBoard"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="15dp"
        android:text="@string/createButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.hellobird.paintView
        android:id="@+id/testPaint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#9E9C9C"
        android:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@id/optionButtonBoard"
        app:layout_constraintLeft_toLeftOf="@id/saveButtonBoard"
        app:layout_constraintTop_toBottomOf="@id/saveButtonBoard"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/optionButtonBoard"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="4dp"
        android:background="#FF00FB"
        android:text="@string/optionsButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButtonBoard"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/saveButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearButtonBoard"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="4dp"
        android:text="@string/clearButtonBoard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="121dp"
        android:layout_height="30dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="6dp"
        android:background="#AC9F9F"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createButtonBoard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

</androidx.constraintlayout.widget.ConstraintLayout>